added minimum viable social media markup

--- a/index.html
+++ b/index.html
@@ -34,9 +34,19 @@ $forecastKey = 'ADD-YOUR-FORECAST.IO-API-KEY-HERE';
 <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Search - Prototype App for "Improving Search UX using Query Analysis and Machine Cues"</title>
         <meta name="description" content="Search Application, Prototype for Digital Library Forum 2015 presentation - Is there a Ghost in the [Search] Machine? Improving Search UX using Query Analysis and Machine Cues">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+	<!-- Social Media Tags -->
+	<meta property="og:title" content="Search - Prototype App for "Improving Search UX using Query Analysis and Machine Cues"/>
+	<meta property="og:description" content="Search Application, Prototype for Digital Library Forum 2015 presentation - Is there a Ghost in the [Search] Machine? Improving Search UX using Query Analysis and Machine Cues"/>
+	<meta property="og:image" content="http://www.lib.montana.edu/~jason/meta/img/clark-share-default.png"/>
+	<meta property="og:url" content="http://www.lib.montana.edu/~jason/search-ux/"/>
+	<meta property="og:type" content="website"/>
+	<meta name="twitter:creator" property="og:site_name" content="@jaclark"/>
+	<meta name="twitter:card" content="summary_large_image"/>
+	<meta name="twitter:site" content="http://www.jasonclark.info"/>
+	<!-- End Social Media Tags -->
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans" />
 	<link rel="stylesheet" href="./meta/styles/main.css" />
 <!--[if IE]>
