fixed extra quote in og:title

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ $forecastKey = 'ADD-YOUR-FORECAST.IO-API-KEY-HERE';
         <title>Search - Prototype App for "Improving Search UX using Query Analysis and Machine Cues"</title>
         <meta name="description" content="Search Application, Prototype for Digital Library Forum 2015 presentation - Is there a Ghost in the [Search] Machine? Improving Search UX using Query Analysis and Machine Cues">
 	<!-- Social Media Tags -->
-	<meta property="og:title" content="Search - Prototype App for "Improving Search UX using Query Analysis and Machine Cues"/>
+	<meta property="og:title" content="Search - Prototype App for Improving Search UX using Query Analysis and Machine Cues"/>
 	<meta property="og:description" content="Search Application, Prototype for Digital Library Forum 2015 presentation - Is there a Ghost in the [Search] Machine? Improving Search UX using Query Analysis and Machine Cues"/>
 	<meta property="og:image" content="http://www.lib.montana.edu/~jason/meta/img/clark-share-default.png"/>
 	<meta property="og:url" content="http://www.lib.montana.edu/~jason/search-ux/"/>
