--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ $forecastKey = 'ADD-YOUR-FORECAST.IO-API-KEY-HERE';
 	<meta name="twitter:card" content="summary_large_image"/>
 	<meta name="twitter:site" content="http://www.jasonclark.info"/>
 	<!-- End Social Media Tags -->
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans" />
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" />
 	<link rel="stylesheet" href="./meta/styles/main.css" />
 <!--[if IE]>
 	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
