--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <?php
 // Set default value for query
-$q = isset($_GET['q']) ? urlencode(strip_tags(trim($_GET['q']))) : null; 
+$q = isset($_GET['q']) ? urlencode(strip_tags(trim($_GET['q']))) : null;
 
 // Set default value for API format
-$form = isset($_GET['form']) ? htmlentities(strip_tags($_GET['form'])) : 'json'; 
+$form = isset($_GET['form']) ? htmlentities(strip_tags($_GET['form'])) : 'json';
 
 // Set default value for page length (number of records to display)
 $limit = isset($_GET['limit']) ? strip_tags((int)$_GET['limit']) : '10';
@@ -12,13 +12,13 @@ $limit = isset($_GET['limit']) ? strip_tags((int)$_GET['limit']) : '10';
 $start = isset($_GET['start']) ? strip_tags((int)$_GET['start']) : '1';
 
 // Set default value for facet browse
-$facet = isset($_GET['facet']) ? htmlentities(strip_tags($_GET['facet'])) : null; 
+$facet = isset($_GET['facet']) ? htmlentities(strip_tags($_GET['facet'])) : null;
 
-// Set default value for results sorting 
-$sort = isset($_GET['sort']) ? htmlentities(strip_tags($_GET['sort'])) : null; 
+// Set default value for results sorting
+$sort = isset($_GET['sort']) ? htmlentities(strip_tags($_GET['sort'])) : null;
 
 // Set API version for Google Custom Search API
-$v = isset($_GET['v']) ? strip_tags((int)$_GET['v']) : 'v1'; 
+$v = isset($_GET['v']) ? strip_tags((int)$_GET['v']) : 'v1';
 
 // Set user API key for Google Custom Search API
 $key = isset($_GET['key']) ? $_GET['key'] : 'YOUR-GOOGLE-CUSTOM-SEARCH-API-KEY-HERE';
@@ -34,7 +34,7 @@ $forecastKey = 'ADD-YOUR-FORECAST.IO-API-KEY-HERE';
 <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Search - Prototype App for "Improving Search UX using Query Analysis and Machine Cues"</title>
         <meta name="description" content="Search Application, Prototype for Digital Library Forum 2015 presentation - Is there a Ghost in the [Search] Machine? Improving Search UX using Query Analysis and Machine Cues">
 	<!-- Social Media Tags -->
@@ -47,7 +47,7 @@ $forecastKey = 'ADD-YOUR-FORECAST.IO-API-KEY-HERE';
 	<meta name="twitter:card" content="summary_large_image"/>
 	<meta name="twitter:site" content="http://www.jasonclark.info"/>
 	<!-- End Social Media Tags -->
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400" />
+	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:400" />
 	<link rel="stylesheet" href="./meta/styles/main.css" />
 <!--[if IE]>
 	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -57,10 +57,10 @@ $forecastKey = 'ADD-YOUR-FORECAST.IO-API-KEY-HERE';
 <div class="flexbox fullheight fullwidth">
 	<div class="flex-search" role="main"> 
 		<h1>Ten Blue Links</h1>
-                <form method="get" action="index.html">
-                        <input class="search" type="text" name="q" id="q" tabindex="1" placeholder="Search..." value="<?php if (!is_null($q)) { echo urldecode($q); } ?>" required />
-                        <input class="button" type="submit" value="Search" />
-                </form>
+		<form method="get" action="index.html">
+			<input class="search" type="text" name="q" id="q" tabindex="1" placeholder="Search..." value="<?php if (!is_null($q)) { echo urldecode($q); } ?>" required />
+			<input class="button" type="submit" value="Search" />
+		</form>
 <?php
 	if (!is_null($q)) {
 	// Process query
@@ -69,7 +69,7 @@ $forecastKey = 'ADD-YOUR-FORECAST.IO-API-KEY-HERE';
 	$url = "https://www.googleapis.com/customsearch/$v?key=$key&cx=$id&alt=$form".(is_null($sort) ? "" : "&sort=$sort")."&num=$limit&start=$start&prettyprint=true&q=$q".(is_null($facet) ? "" : "&hq=$facet");
 
 	// View source to see raw API call - REMOVE from production code
-	echo '<!--' . $url . '-->';
+	//echo '<!--' . $url . '-->';
 
 	// Build request and send to Google Ajax Search API
 	$request = file_get_contents($url);
@@ -189,7 +189,7 @@ if (in_array(strtolower($qToken), $cueWords)) {
 $url = "https://www.googleapis.com/customsearch/$v?key=$key&cx=$id&alt=$form".(is_null($sort) ? "" : "&sort=$sort")."&num=$limit&start=$start&prettyprint=true&q=$q".(is_null($facet) ? "" : "&hq=$facet");
 
         // View source to see raw API call - REMOVE from production code
-        //echo '<!--' . $url . '-->';
+        echo '<!--' . $url . '-->';
 
         // Build request and send to Google Ajax Search API
         $request = file_get_contents($url);
@@ -304,9 +304,25 @@ $url = "https://www.googleapis.com/customsearch/$v?key=$key&cx=$id&alt=$form".(i
                 </details>
                 <details id="offer">
                 <summary>Offers</summary>
+		<p>Offers based on current date and local weather.</p>
 <?php
-//forecast.io api docs at https://developer.forecast.io/docs/v2
+//show research offer by comparing current year-month-day to fall/spring year-month-day range
+$year = date("Y");
+$today = strtotime(date("Y-m-d"));
+$researchOfferFallBegin = strtotime("$year-10-1");
+$researchOfferFallEnd = strtotime("$year-12-18");
+$researchOfferSpringBegin = strtotime("$year-03-01");
+$researchOfferSpringEnd = strtotime("$year-05-18");
 
+if ($today > $researchOfferFallBegin && $today < $researchOfferFallEnd) {
+                echo '<p>It is that time of the year. The days are shorter and research papers are happening. Get started by <a href="http://ask.lib.montana.edu/ask">talking to a Librarian</a>.</p>';
+} elseif ($today > $researchOfferSpringBegin && $today < $researchOfferSpringEnd) {
+                echo '<p>It is that time of the year. Spring fever is almost here, but you have a research paper to write. Get started by <a href="http://ask.lib.montana.edu/ask">talking to a Librarian</a>.</p>';
+} else {
+                echo '<p>The semester is just getting started. You still have some time to read. <a href="https://www.lib.montana.edu/locations/first.html">Check out our browse collection</a>.</p>';  
+} //end research offer based on date conditional
+
+//forecast.io api docs at https://developer.forecast.io/docs/v2
 //set default value for latitude
 $lat = isset($_REQUEST['lat']) ? strip_tags(floatval($_REQUEST['lat'])) : '49.246292';
 //set default value for latitude
@@ -332,11 +348,9 @@ if ($request === FALSE) {
 $result = json_decode($request);
 
 if (strlen($result->latitude) > 2) {
-?>
-<p>Offers based on local weather and current date.</p>
-<?php
-//dependency on skycons.js to make animated weather icons appear - https://github.com/darkskyapp/skycons
 
+//show offer for library cafe based on location coordinates and current weather
+//dependency on skycons.js to make animated weather icons appear - https://github.com/darkskyapp/skycons
 //parse returned data elements from api call and display as html
 $summary = $result->currently->summary;
 $icon = $result->currently->icon;
@@ -348,40 +362,21 @@ $cloudCover = $result->currently->cloudCover;
 ?>
         <!--<p><figure><canvas id="<?php //echo $icon; ?>" width="64" height="64"></canvas></figure></p>-->
 <?php
-if ($cloudCover > .3) {
+	if ($cloudCover > .3) {
 ?>
-	<p>It's cloudy and cold, stop in for a cup of something warm. Check out the <a href="http://www.montana.edu/ufs/menus/brewed_awakening.php">"Brewed Awakening" hours and menu.</a></p>
+	<p>It's cloudy and cold, stop in for a cup of something warm. Check out the <a href="http://www.montana.edu/ufs/menus/brewed_awakening.php">"Brewed Awakening" hours and menu</a>.</p>
 <?php
-} else {
+	} else {
 ?>
-	<p>Here comes the sun, stop in for a cup of something cool. Check out the <a href="http://www.montana.edu/ufs/menus/brewed_awakening.php">"Brewed Awakening" hours and menu.</a></p>
+	<p>Here comes the sun, stop in for a cup of something cool. Check out the <a href="http://www.montana.edu/ufs/menus/brewed_awakening.php">"Brewed Awakening" hours and menu</a>.</p>
 <?php
-} // end suggestion based on weather
-} else {
+	} // end suggestion based on weather
+	} else {
 ?>
-<p class="subHeading">No forecast.io results for <strong><?php urldecode($q); ?></strong>.</p>
-<p class="control"><a href="<?php echo htmlentities(strip_tags(basename(__FILE__))); ?>" class="refresh">Reset the page</a></p>
+	<p class="subHeading">No forecast.io results for <strong><?php urldecode($q); ?></strong>.</p>
+	<p class="control"><a href="<?php echo htmlentities(strip_tags(basename(__FILE__))); ?>" class="refresh">Reset the page</a></p>
 <?php
-} //end weather conditional
-
-//show research offer by comparing current year-month-day to fall/spring year-month-day range
-$year = date("Y");
-$today = strtotime(date("Y-m-d"));
-$researchOfferFallBegin = strtotime("$year-10-1");
-$researchOfferFallEnd = strtotime("$year-12-18");
-$researchOfferSpringBegin = strtotime("$year-03-01");
-$researchOfferSpringEnd = strtotime("$year-05-18");
-
-if ($today > $researchOfferFallBegin && $today < $researchOfferFallEnd) {
-		echo '<p>It is that time of the year. The days are shorter and research papers are happening. Get started by <a href="http://ask.lib.montana.edu/ask">talking to a Librarian</a></p>';
-} elseif ($today > $researchOfferSpringBegin && $today < $researchOfferSpringEnd) {
-		echo '<p>It is that time of the year. Spring fever is almost here, but you have a research paper to write. Get started by <a href="http://ask.lib.montana.edu/ask">talking to a Librarian</a></p>';
-} else {
-		echo 'The semester is just getting started. You still have some time to read. <a href="https://www.lib.montana.edu/locations/first.html">Check out our browse collection</a></p>';  
-} //end research offer based on date conditional
-?>
-		</details>
-<?php
+	} //end weather conditional
 	} //end conditional checking for any result sets - these are the default facets
 } //end (!is_null($q))
 ?>
