anonymized file and account keys

--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@ $sort = isset($_GET['sort']) ? htmlentities(strip_tags($_GET['sort'])) : null;
 $v = isset($_GET['v']) ? strip_tags((int)$_GET['v']) : 'v1';
 
 // Set user API key for Google Custom Search API
-$key = isset($_GET['key']) ? $_GET['key'] : 'AIzaSyDD_m3LerirQ6iTJIoyMaxiQoiRBqKEjd0';
+$key = isset($_GET['key']) ? $_GET['key'] : 'YOUR-GOOGLE-CUSTOM-SEARCH-API-KEY-HERE';
 
 // Set user ID for Google custom search engine
-$id = isset($_GET['id']) ? $_GET['id'] : '010001021870615082419:c11y2dyi94c';
+$id = isset($_GET['id']) ? $_GET['id'] : 'YOUR-GOOGLE-CUSTOM-SEARCH-ENGINE-ID-HERE';
 
 // Set forecast.io API key
-$forecastKey = 'bd9363de1a48419bf2af38384f5afe8b';
+$forecastKey = 'YOUR-FORECAST.IO-API-KEY-HERE';
 ?>
 <!doctype html>
 <html lang="en">
