--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@ $q = isset($_GET['q']) ? urlencode(strip_tags(trim($_GET['q']))) : null;
 // Set default value for API format
 $form = isset($_GET['form']) ? htmlentities(strip_tags($_GET['form'])) : 'json';
 
+// Number of records to display per page; NOTE: dependency for $next and $previous links 
+$recordsPerPage = '10';
+
 // Set default value for page length (number of records to display)
-$limit = isset($_GET['limit']) ? strip_tags((int)$_GET['limit']) : '10';
+$limit = isset($_GET['limit']) ? strip_tags((int)$_GET['limit']) : "$recordsPerPage";
 
 // Set default value for page start index
 $start = isset($_GET['start']) ? strip_tags((int)$_GET['start']) : '1';
