added more description of data sources related to privacy

--- a/privacy.html
+++ b/privacy.html
@@ -18,9 +18,9 @@
 		<h1>Privacy - Ten Blue Links</h1>
 		<p>With this project, I am interested in preserving the privacy of users while allowing for customizations that add value to searching and browsing. In the interest of transparency, I'm listing the sources of the data that allowed for the enhancements and facets for the application</p>
 		<ul>
-			<li>Rudimentary sentiment analysis and semantic evaluation of the search query</li>
-			<li>Cues from the "machine": HTTP Headers, global server variables, and location info from the network or browser</li>
-			<li>IP and PII (personally identifiable information) anonymized search log and web analytics data</li>
+			<li>Rudimentary intention analysis and semantic evaluation of the search query string/pattern</li>
+			<li>Cues from the "machine": HTTP Headers, global server variables, web browser Javascript variables, and location info from the network or browser</li>
+			<li>Anonymized search log and web analytics data with IP and PII (personally identifiable information) removed</li>
 		</ul>
 		<p>I'm interested in finding the line where utility and adding value with this data cross into notions of surveillance. If you have thoughts or want to learn more, <a href="http://www.jasonclark.info">contact Jason A. Clark</a> or find me on twitter <a href="https://twitter.com/jaclark">@jaclark</a>.</p>
 	</div>
