reworking no results message

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ $forecastKey = 'YOUR-FORECAST.IO-API-KEY-HERE';
 
 	if ($totalItems <= 0) {
 	// Empty results, display message to user
-		echo '<p><strong>Sorry, there were no results</strong></p>'."\n";
+		echo '<p><strong>Sorry, no results here</strong></p>'."\n";
 	} else {
 		// Make sure some results were returned, show results as html with result numbering and pagination
 ?>
