refined no results message: fewer words, direct call to action

--- a/index.html
+++ b/index.html
@@ -90,13 +90,13 @@ $forecastKey = 'YOUR-FORECAST.IO-API-KEY-HERE';
 	// Empty results, display message to user
 ?>
 	<p><strong>Sorry, no results here.</strong> &#9785;</p>
-	<p>Try the suggestions below or enter a new query above.</p>
+	<p>A few suggestions:</p>
 	<ul>
 		<li>Check your spelling.</li>
 		<li>Try more general words.</li>
 		<li>Try different words that mean the same thing.</li>
 		<li>Broaden your search by using fewer words.</li>
-		<li><a href="http://ask.lib.montana.edu/ask">Talk to a librarian.</a></li>
+		<li><a href="http://ask.lib.montana.edu/ask">Talk to a librarian</a>.</li>
 	</ul>
 <?php
 	} else {
