added smiling face on ask a librarian link

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ $forecastKey = 'YOUR-FORECAST.IO-API-KEY-HERE';
 		<li>Try more general words.</li>
 		<li>Try different words that mean the same thing.</li>
 		<li>Broaden your search by using fewer words.</li>
-		<li><a href="http://ask.lib.montana.edu/ask">Talk to a librarian</a>.</li>
+		<li><a href="http://ask.lib.montana.edu/ask">Talk to a librarian</a>. &#9786;</li>
 	</ul>
 <?php
 	} else {
