standardized no results message

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ $forecastKey = 'YOUR-FORECAST.IO-API-KEY-HERE';
 	if ($totalItems <= 0) {
 	// Empty results, display message to user
 ?>
-	<p><strong>Sorry, no results here.</strong> &#9785;</p>
+	<p><strong>Sorry, there were no results.</strong> &#9785;</p>
 	<p>A few suggestions:</p>
 	<ul>
 		<li>Check your spelling.</li>
