added rel=author on homepage link

--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
     <ul>
       <li>Prototype for Digital Library Forum 2015 presentation: "Is there a Ghost in the [Search] Machine? Improving Search UX using Query Analysis and Machine Cues". <a href="http://www.lib.montana.edu/~jason/talks.html" title="slides for Is there a Ghost in the [Search] Machine? Improving Search UX using Query Analysis and Machine Cues">Slides for context are available</a>.</li>
     </ul>
-    <p><strong>Creator(s)</strong>: Jason A. Clark web: <a href="http://www.jasonclark.info">jason clark</a> twitter: <a href="https://twitter.com/jaclark">@jaclark</a></p>
+    <p><strong>Creator(s)</strong>: Jason A. Clark web: <a href="http://www.jasonclark.info" rel="author">jason clark</a> twitter: <a href="https://twitter.com/jaclark">@jaclark</a></p>
     <p><strong>Version</strong>: 1.0.0 [<a href="https://github.com/jasonclark/search-ux">code on GitHub</a>]</p>
     <p><strong>Tech</strong>: Javascript, PHP, HTML, and CSS</p>
   </div>
