added references to data sources + sites indexed

--- a/about.html
+++ b/about.html
@@ -22,7 +22,16 @@
     </ul>
     <p><strong>Creator(s)</strong>: Jason A. Clark web: <a href="http://www.jasonclark.info" rel="author">jason clark</a> twitter: <a href="https://twitter.com/jaclark">@jaclark</a></p>
     <p><strong>Version</strong>: 1.0.0 [<a href="https://github.com/jasonclark/search-ux">code on GitHub</a>]</p>
-    <p><strong>Tech</strong>: Javascript, PHP, HTML, and CSS</p>
+    <p><strong>Tech</strong>: Javascript, PHP, Python, HTML, and CSS</p>
+    <p><strong>Data Sources:</strong></p>
+    <ul>
+      <li>https://arc.lib.montana.edu</li>
+      <li>https://ask.lib.montana.edu</li>
+      <li>https://guides.lib.montana.edu</li>
+      <li>http://www.lib.montana.edu</li>
+      <li>http://www.lib.montana.edu/sitemap.html</li>
+      <li>http://www.lib.montana.edu/search/search-log.txt</li>
+    </ul>
   </div>
   <div class="flex-facet" role="complementary">
     <h1>Links</h1>
