added id=data-sources for anchor link to data sources

--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
     <p><strong>Creator(s)</strong>: Jason A. Clark web: <a href="http://www.jasonclark.info" rel="author">jason clark</a> twitter: <a href="https://twitter.com/jaclark">@jaclark</a></p>
     <p><strong>Version</strong>: 1.0.0 [<a href="https://github.com/jasonclark/search-ux">code on GitHub</a>]</p>
     <p><strong>Tech</strong>: Javascript, PHP, Python, HTML, and CSS</p>
-    <p><strong>Data Sources:</strong></p>
+    <p id="data-sources"><strong>Data Sources:</strong></p>
     <ul>
       <li>https://arc.lib.montana.edu</li>
       <li>https://arc.lib.montana.edu/digital-collections/search-log.txt</li>
