linked to data sources

--- a/privacy.html
+++ b/privacy.html
@@ -16,7 +16,7 @@
 <div class="flexbox fullheight fullwidth">
   <div class="flex-search" role="main"> 
     <h1>Privacy - Ten Blue Links</h1>
-    <p>With this project, I am interested in preserving the privacy of users while allowing for customizations that add value to searching and browsing. In the interest of transparency, I'm listing the sources of the data that allowed for the enhancements and facets for the application</p>
+    <p>With this project, I am interested in preserving the privacy of users while allowing for customizations that add value to searching and browsing. In the interest of transparency, I'm listing the <a href="about.html#data-sources">sources of the data</a> and the processes that allowed for the enhancements and facets for the application</p>
     <ul>
       <li>Rudimentary intention analysis and semantic evaluation of the search query string/pattern</li>
       <li>Cues from the "machine": HTTP Headers, global server variables, web browser Javascript variables, and location info from the network or browser</li>
