set link rel=preconnect for font load

--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
 <title>About the Prototype Search App for "Improving Search UX using Query Analysis and Machine Cues"</title>
 <meta name="description" content="About the Search Application Prototype for Digital Library Forum 2015 presentation - Is there a Ghost in the [Search] Machine? Improving Search UX using Query Analysis and Machine Cues">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="preconnect" href="https://fonts.googleapis.com" crossorigin />
 <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans" />
 <link rel="stylesheet" href="./meta/styles/main.css" />
 <!--[if IE]>
