--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@ $forecastKey = 'YOUR-FORECAST.IO-API-KEY-HERE';
 <meta name="twitter:card" content="summary_large_image"/>
 <meta name="twitter:site" content="http://www.jasonclark.info"/>
 <!-- End Social Media Tags -->
+<link rel="preconnect" href="https://fonts.googleapis.com" crossorigin />
 <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:400" />
 <link rel="stylesheet" href="./meta/styles/main.css" />
 <!--[if IE]>
