set link rel=preconnect for API URLs to load

--- a/index.html
+++ b/index.html
@@ -47,9 +47,13 @@ $forecastKey = 'YOUR-FORECAST.IO-API-KEY-HERE';
 <meta name="twitter:card" content="summary_large_image"/>
 <meta name="twitter:site" content="http://www.jasonclark.info"/>
 <!-- End Social Media Tags -->
-<link rel="preconnect" href="https://fonts.googleapis.com" crossorigin />
-<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:400" />
-<link rel="stylesheet" href="./meta/styles/main.css" />
+<link rel="preconnect" href="//api.forecast.io" crossorigin/>
+<link rel="preconnect" href="//experimental.worldcat.org" crossorigin/>
+<link rel="preconnect" href="//www.google.com" crossorigin/>
+<link rel="preconnect" href="//www.googleapis.com/" crossorigin/>
+<link rel="preconnect" href="//fonts.googleapis.com" crossorigin/>
+<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:400"/>
+<link rel="stylesheet" href="./meta/styles/main.css"/>
 <!--[if IE]>
 <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
