--- a/index.html
+++ b/index.html
@@ -54,11 +54,15 @@ $forecastKey = 'YOUR-FORECAST.IO-API-KEY-HERE';
 <link rel="preconnect" href="//fonts.googleapis.com" crossorigin/>
 <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:400"/>
 <link rel="stylesheet" href="./meta/styles/main.css"/>
+<style>
+.progress {background:linear-gradient(to right, #207cca var(--scroll), transparent 0);position:fixed;width:100%;height:4px;z-index:1}
+</style>
 <!--[if IE]>
 <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
 </head>
 <body>
+<div class="progress" style=""></div>	
 <div class="flexbox fullheight fullwidth">
   <div class="flex-search" role="main"> 
     <h1>Ten Blue Links</h1>
@@ -408,5 +412,20 @@ if ($cloudCover > .3) {
     <p class="info"><a href="about.html">What is this?</a> <a href="privacy.html">Privacy?</a></p>
   </div>
 </div>
+<script>
+//watches scroll position in window and shows progress using left to right animated bar
+//dependent on <div class="progress"> and .progress inline CSS class
+  var h = document.documentElement;
+  var b = document.body;
+  var st = "scrollTop";
+  var sh = "scrollHeight";
+  var progress = document.querySelector(".progress");
+  var scroll;
+  document.addEventListener("scroll", function () {
+    "use strict";
+    scroll = (h[st] || b[st]) / ((h[sh] || b[sh]) - h.clientHeight) * 100;
+    progress.style.setProperty("--scroll", scroll + "%");
+  });
+</script>
 </body>
 </html>
