--- a/index.html
+++ b/index.html
@@ -25,9 +25,6 @@ $key = isset($_GET['key']) ? $_GET['key'] : 'YOUR-GOOGLE-CUSTOM-SEARCH-API-KEY-H
 
 // Set user ID for Google custom search engine
 $id = isset($_GET['id']) ? $_GET['id'] : 'YOUR-GOOGLE-CUSTOM-SEARCH-ENGINE-ID-HERE';
-
-// Set forecast.io API key
-$forecastKey = 'YOUR-FORECAST.IO-API-KEY-HERE';
 ?>
 <!doctype html>
 <html lang="en">
@@ -363,65 +360,31 @@ if ($today > $researchOfferFallBegin && $today < $researchOfferFallEnd) {
 		<p>The semester is just getting started. You still have some time to read. <a href="https://www.lib.montana.edu/locations/first.html">Check out our browse collection</a>.</p>
 <?php
 } //end research offer based on date conditional
-
-//forecast.io api docs at https://developer.forecast.io/docs/v2
-//set default value for latitude
-$lat = isset($_REQUEST['lat']) ? strip_tags(floatval($_REQUEST['lat'])) : '49.246292';
-//set default value for latitude
-$lng = isset($_REQUEST['lng']) ? strip_tags(floatval($_REQUEST['lng'])) : '-123.116226';
-
-//set base url for request to forecast.io API
-$apiURL = 'https://api.forecast.io/forecast/'.$forecastKey.'/'.$lat.','.$lng.'?exclude=minutely,hourly';
-
-//for testing purposes show actual request to API - REMOVE when finished
-//echo $apiURL;
-
-//call API and get data
-$request = file_get_contents($apiURL);
-
-if ($request === FALSE) {
-        //API call failed, display message to user
-        echo '<p><strong>It looks like we can\'t communicate with the API at the moment.</strong></p>'."\n";
-        exit();
+?>
+<p id="weather-offer"></p>
+<script id="weather" type="text/javascript">
+function weatherOffer() {
+  // lat = "49.246292";
+  // lng = "-123.116226";
+  const url = "https://api.weather.gov/gridpoints/TFX/95,56";
+  const xhr = new XMLHttpRequest();
+  xhr.addEventListener("load", function() {
+    const results = JSON.parse(this.responseText);
+    cloudCover = results.properties.skyCover.values[0].value;
+    message = '<p>Here comes the sun, stop in for a cup of something cool. Check out the <a href="https://www.lib.montana.edu/spaces/">"Brewed Awakening" hours and menu</a>.';
+    if (cloudCover > 0.3) {
+      message = 'It\'s cloudy and cold, stop in for a cup of something warm. Check out the <a href="https://www.lib.montana.edu/spaces/">"Brewed Awakening" hours and menu</a>.';
+    }
+    offerElement = document.getElementById("weather-offer");
+    offerElement.innerHTML = message;
+  });
+  xhr.open("GET", url);
+  xhr.send();
 }
-
-//create json object(s) out of response from API; set to "true" to turn response into an array
-//$result = json_decode($request,true);
-$result = json_decode($request);
-
-if (strlen($result->latitude) > 2) {
-
-//show offer for library cafe based on location coordinates and current weather
-//dependency on skycons.js to make animated weather icons appear - https://github.com/darkskyapp/skycons
-//parse returned data elements from api call and display as html
-$summary = $result->currently->summary;
-$icon = $result->currently->icon;
-$temperature = $result->currently->temperature;
-$wind = $result->currently->windSpeed;
-$pressure = $result->currently->pressure;
-$precipProbability = $result->currently->precipProbability;
-$cloudCover = $result->currently->cloudCover;
-?>
-        <!--<p><figure><canvas id="<?php //echo $icon; ?>" width="64" height="64"></canvas></figure></p>-->
+weatherOffer();
+</script>
+        </details>
 <?php
-	if ($cloudCover > .3) {
-?>
-	<p>It's cloudy and cold, stop in for a cup of something warm. Check out the <a href="http://www.montana.edu/ufs/menus/brewed_awakening.php">"Brewed Awakening" hours and menu</a>.</p>
-	</details>
-<?php
-	} else {
-?>
-	<p>Here comes the sun, stop in for a cup of something cool. Check out the <a href="http://www.montana.edu/ufs/menus/brewed_awakening.php">"Brewed Awakening" hours and menu</a>.</p>
-	</details>
-<?php
-	} // end suggestion based on weather
-	} else {
-?>
-	<p class="subHeading">No forecast.io results for <strong><?php urldecode($q); ?></strong>.</p>
-	<p class="control"><a href="<?php echo htmlentities(strip_tags(basename(__FILE__))); ?>" class="refresh">Reset the page</a></p>
-	</details>
-<?php
-	} //end weather conditional
 	} //end conditional checking for any result sets - these are the default facets
 } //end (!is_null($q))
 ?>
